# SDLx_model

./: .gitmodules  CMakeLists.txt  README.md
include/SDLx_model/: SDL_model.h
src/: SDL_model.cpp  SDL_model_gltf.cpp  SDL_model_vox_obj.cpp  gltf.cpp  internal.cpp  internal.hpp  vox_obj.cpp  vox_raw.cpp
test/: main.cpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  test.cpp
test/models/vox_obj/: 20x40x10.mtl  monu2.vox
test/models/vox_raw/: 20x40x10.vox  monu1.vox
test/shaders/: gltf.frag  gltf.vert  vox_obj.frag  vox_obj.vert  vox_raw.vert
